Commit of Salesforce metadata by Gearset

--- a/unpackaged/main/default/classes/DataMigrationScheduleTest.cls
+++ b/unpackaged/main/default/classes/DataMigrationScheduleTest.cls
@@ -11,15 +11,16 @@ public with sharing class DataMigrationScheduleTest {
     @isTest
     static void testScheduleExecution() {
         // Test the scheduled batch job execution
-        DateTime thisNow = Datetime.now();
+        
         Test.startTest();
         String jobId = System.schedule('Data Migration Batch', '0 0 0 * * ?', new DataMigrationSchedule());
         Test.stopTest();
+        Date thisNow = system.today();
         // Verify that the scheduled job was executed
         List<AsyncApexJob> jobs = [SELECT Id, Status FROM AsyncApexJob];
         Assert.areEqual('Queued', jobs[0].Status);
         // Verify that the customsetting was updated with last execution date
         BatchLastExecutionTime__c setting = BatchLastExecutionTime__c.getOrgDefaults();
-        Assert.areEqual(thisNow, setting.DataMigrationLastExecutionDate__c);
+        Assert.areEqual(thisNow, setting.DataMigrationLastExecutionDate__c.date());
     }
 }
