Commit of Salesforce metadata by Gearset

--- a/unpackaged/main/default/classes/BL_WECHAT_Bind_Test.cls
+++ b/unpackaged/main/default/classes/BL_WECHAT_Bind_Test.cls
@@ -7,8 +7,8 @@ public class BL_WECHAT_Bind_Test {
         try{
             Profile sysAdmin = [SELECT Id FROM Profile WHERE Name = 'System Administrator'];
             User u = new User();
-            u.UserName = '' + UserInfo.getOrganizationId() + System.now().millisecond() + 'test@test111k.net';
-            u.Email ='test@test111.net';
+            u.UserName = '' + UserInfo.getOrganizationId() + System.now().millisecond() + 'test@rimowa.com';
+            u.Email ='test@rimowa.com';
             u.LastName = 'test';
             u.ProfileId = sysAdmin.Id;
             u.LocaleSidKey = 'en_US';
@@ -87,8 +87,8 @@ public class BL_WECHAT_Bind_Test {
 		Profile sysAdmin = [SELECT Id FROM Profile WHERE Name = 'System Administrator'];
         
 		User u = new User();
-		u.UserName = '' + UserInfo.getOrganizationId() + System.now().millisecond() + 'test@test111k.net';
-		u.Email ='test@test111.net';
+		u.UserName = '' + UserInfo.getOrganizationId() + System.now().millisecond() + 'test@rimowa.com';
+		u.Email ='test@rimowa.com';
 		u.LastName = 'test';
 		u.ProfileId = sysAdmin.Id;
 		u.LocaleSidKey = 'en_US';
@@ -161,8 +161,8 @@ public class BL_WECHAT_Bind_Test {
             Profile sysAdmin = [SELECT Id FROM Profile WHERE Name = 'System Administrator'];
             
             User u = new User();
-            u.UserName = '' + UserInfo.getOrganizationId() + System.now().millisecond() + 'test@test111k.net';
-            u.Email ='test@test111.net';
+            u.UserName = '' + UserInfo.getOrganizationId() + System.now().millisecond() + 'test@rimowa.com';
+            u.Email ='test@rimowa.com';
             u.LastName = 'test';
             u.ProfileId = sysAdmin.Id;
             u.LocaleSidKey = 'en_US';
@@ -236,8 +236,8 @@ public class BL_WECHAT_Bind_Test {
             Profile sysAdmin = [SELECT Id FROM Profile WHERE Name = 'System Administrator'];
             
             User u = new User();
-            u.UserName = '' + UserInfo.getOrganizationId() + System.now().millisecond() + 'test@test111k.net';
-            u.Email ='test@test111.net';
+            u.UserName = '' + UserInfo.getOrganizationId() + System.now().millisecond() + 'test@rimowa.com';
+            u.Email ='test@rimowa.com';
             u.LastName = 'test';
             u.ProfileId = sysAdmin.Id;
             u.LocaleSidKey = 'en_US';
